# CloudDrive

./: .SRCINFO  .gitignore  LICENSE  PKGBUILD  README.md  clouddrive.spec  config.toml.example  pyproject.toml
dbus/: org.clouddrive.Daemon.service
desktop/: clouddrive.desktop
scripts/: build-appimage.sh
src/clouddrive/: __init__.py
src/clouddrive/cli/: main.py
src/clouddrive/core/: api.py  auth.py  config.py  database.py  ondemand.py  placeholders.py  sync_engine.py  watcher.py
src/clouddrive/daemon/: service.py
src/clouddrive/gui/: activity.py  app.py  settings.py  tray.py  wizard.py
systemd/: clouddrive.service
