[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clouddrive"
version = "0.1.0"
description = "A modern, user-friendly OneDrive client for Linux"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "CloudDrive Contributors"},
]
keywords = ["onedrive", "microsoft", "cloud", "sync", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "PySide6>=6.6",
    "msal>=1.28",
    "httpx>=0.27",
    "keyring>=25.0",
    "watchdog>=4.0",
    "platformdirs>=4.2",
    "pydbus>=0.6",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "humanize>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.3",
    "ruff>=0.3",
    "mypy>=1.9",
    "pre-commit>=3.6",
]
bundle = [
    "pyinstaller>=6.0",
]

[project.scripts]
clouddrive = "clouddrive.cli.main:main"
clouddrive-gui = "clouddrive.gui.app:main"
clouddrive-daemon = "clouddrive.daemon.service:main"

[project.gui-scripts]
clouddrive-gui = "clouddrive.gui.app:main"

[project.urls]
Homepage = "https://github.com/Cyclosaryn/CloudDrive"
Repository = "https://github.com/Cyclosaryn/CloudDrive"
Issues = "https://github.com/Cyclosaryn/CloudDrive/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
